--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,7 +10,7 @@ body {
 body::before {
   content: "";
   position: fixed;
-  background: #8f4282 url("../img/bg.jpg") top right no-repeat;
+  background: #000000 url("../img/bg.jpg") top right no-repeat;
   background-size: cover;
   left: 0;
   right: 0;
@@ -26,7 +26,7 @@ body::before {
 }
 
 a {
-  color: #eaebe8;
+  color: #7cab1e;
   text-decoration: none;
 }
 
@@ -72,7 +72,7 @@ h6 {
 
 #header h1 a,
 #header h1 a:hover {
-  color: #fff;
+  color: #2e0bc7;
   line-height: 1;
   display: inline-block;
 }
@@ -80,12 +80,12 @@ h6 {
 #header h2 {
   font-size: 24px;
   margin-top: 20px;
-  color: rgba(0, 0, 0, 0.8);
+  color: rgba(243, 225, 225, 0.8);
 }
 
 #header h2 span {
   color: #fff;
-  border-bottom: 2px solid #18d26e;
+  border-bottom: 2px solid #1897d2;
   padding-bottom: 6px;
 }
 
@@ -114,7 +114,7 @@ h6 {
 }
 
 #header .social-links a:hover {
-  background: #560344;
+  background: #1897d2;
 }
 
 @media (max-width: 992px) {
@@ -145,7 +145,7 @@ h6 {
   left: 0;
   top: 0;
   right: 0;
-  background: rgba(143, 139, 139, 0.9);
+  background: rgba(88, 142, 167, 0.9);
 }
 
 #header.header-top .social-links,
@@ -237,7 +237,7 @@ h6 {
   height: 2px;
   bottom: -4px;
   left: 0;
-  background-color: #18d26e;
+  background-color: #1897d2;
   visibility: hidden;
   width: 0px;
   transition: all 0.3s ease-in-out 0s;
@@ -261,7 +261,7 @@ h6 {
 * Mobile Navigation 
 */
 .mobile-nav-toggle {
-  color: #fff;
+  color: #07054e;
   font-size: 28px;
   cursor: pointer;
   display: none;
@@ -381,7 +381,7 @@ section .container {
   width: 120px;
   height: 1px;
   display: inline-block;
-  background: #4ceb95;
+  background: #1897d2;
   margin: 4px 10px;
 }
 
@@ -401,7 +401,7 @@ section .container {
 .about-me .content h3 {
   font-weight: 700;
   font-size: 26px;
-  color: #18d26e;
+  color: #1897d2;
 }
 
 .about-me .content ul {
@@ -422,7 +422,7 @@ section .container {
 .about-me .content ul i {
   font-size: 16px;
   margin-right: 5px;
-  color: #18d26e;
+  color: #1897d2;
   line-height: 0;
 }
 
@@ -453,7 +453,7 @@ section .container {
   font-size: 24px;
   background: rgba(255, 255, 255, 0.1);
   padding: 12px;
-  color: #18d26e;
+  color: #1897d2;
   border-radius: 50px;
   line-height: 0;
 }
@@ -505,7 +505,7 @@ section .container {
   width: 1px;
   height: 10px;
   transition: 0.9s;
-  background-color: #18d26e;
+  background-color: #1897d2;
 }
 
 /*--------------------------------------------------------------
@@ -616,7 +616,7 @@ section .container {
 }
 
 .testimonials .swiper-pagination .swiper-pagination-bullet-active {
-  background-color: #18d26e;
+  background-color: #1897d2;
 }
 
 /*--------------------------------------------------------------
@@ -643,7 +643,7 @@ section .container {
   font-weight: 600;
   text-transform: uppercase;
   font-family: "Poppins", sans-serif;
-  color: #18d26e;
+  color: #1897d2;
   margin-bottom: 10px;
 }
 
@@ -676,8 +676,8 @@ section .container {
   border-radius: 50px;
   left: -9px;
   top: 0;
-  background: #18d26e;
-  border: 2px solid #18d26e;
+  background: #1897d2;
+  border: 2px solid #1897d2;
 }
 
 /*--------------------------------------------------------------
@@ -694,7 +694,7 @@ section .container {
   margin: 0 auto;
   width: 64px;
   height: 64px;
-  background: #18d26e;
+  background: #1897d2;
   border-radius: 5px;
   transition: all 0.3s ease-out 0s;
   display: flex;
@@ -739,8 +739,8 @@ section .container {
 }
 
 .services .icon-box:hover {
-  background: #18d26e;
-  border-color: #18d26e;
+  background: #1897d2;
+  border-color: #1897d2;
 }
 
 .services .icon-box:hover .icon {
@@ -748,11 +748,11 @@ section .container {
 }
 
 .services .icon-box:hover .icon i {
-  color: #18d26e;
+  color: #1897d2;
 }
 
 .services .icon-box:hover .icon::before {
-  background: #35e888;
+  background: #1897d2;
 }
 
 .services .icon-box:hover h4 a,
@@ -793,7 +793,7 @@ section .container {
 
 .portfolio #portfolio-flters li:hover,
 .portfolio #portfolio-flters li.filter-active {
-  background: #18d26e;
+  background: #1897d2;
 }
 
 .portfolio #portfolio-flters li:last-child {
@@ -893,7 +893,7 @@ section .container {
 }
 
 .portfolio .portfolio-wrap .portfolio-links a:hover {
-  color: #63eda3;
+  color: #1897d2;
 }
 
 .portfolio .portfolio-wrap:hover::before {
@@ -987,7 +987,7 @@ section .container {
 }
 
 .portfolio-details .swiper-pagination .swiper-pagination-bullet-active {
-  background-color: #18d26e;
+  background-color: #1897d2;
 }
 
 /*--------------------------------------------------------------
@@ -1002,7 +1002,7 @@ section .container {
 
 .contact .info-box i.bx {
   font-size: 24px;
-  color: #18d26e;
+  color: #1897d2;
   border-radius: 50%;
   padding: 14px;
   float: left;
@@ -1039,7 +1039,7 @@ section .container {
 }
 
 .contact .info-box .social-links a:hover {
-  color: #18d26e;
+  color: #1897d2;
 }
 
 .contact .php-email-form {
@@ -1063,7 +1063,7 @@ section .container {
 .contact .php-email-form .sent-message {
   display: none;
   background: rgba(255, 255, 255, 0.08);
-  background: #18d26e;
+  background: #1897d2;
   text-align: center;
   padding: 15px;
   font-weight: 600;
@@ -1083,7 +1083,7 @@ section .container {
   width: 24px;
   height: 24px;
   margin: 0 10px -6px 0;
-  border: 3px solid #18d26e;
+  border: 3px solid #1897d2;
   border-top-color: #eee;
   animation: animate-loading 1s linear infinite;
 }
@@ -1125,7 +1125,7 @@ section .container {
 }
 
 .contact .php-email-form button[type=submit] {
-  background: #18d26e;
+  background: #1897d2;
   border: 0;
   padding: 10px 30px;
   color: #fff;
@@ -1134,7 +1134,7 @@ section .container {
 }
 
 .contact .php-email-form button[type=submit]:hover {
-  background: #15bb62;
+  background: #1897d2;
 }
 
 @keyframes animate-loading {
@@ -1171,7 +1171,7 @@ section .container {
 }
 
 .credits a {
-  color: #18d26e;
+  color: #1897d2;
   transition: 0.3s;
 }
 
